log/build_2024-10-31_00-06-19/drone_delivery/stderr.log
  File "/home/loris/Documents/Projects/ROS2/drone_delivery/install/drone_delivery/lib/python3.12/site-packages/drone_delivery/drone_control.py", line 107
    break
    ^^^^^
SyntaxError: 'break' outside loop

